--- a/Seminar1/HW02/app/src/main/res/layout/activity_signup.xml
+++ b/Seminar1/HW02/app/src/main/res/layout/activity_signup.xml
@@ -8,9 +8,9 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/sopt_logo"
-        android:layout_marginTop="70dp"
-        android:layout_marginHorizontal="40dp"/>
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/sopt_logo" />
 
     <EditText
         android:id="@+id/et_signUp_email"
