--- a/Seminar1/HW03/app/src/main/res/layout/login_relative_layout.xml
+++ b/Seminar1/HW03/app/src/main/res/layout/login_relative_layout.xml
@@ -1,48 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginHorizontal="24dp"
+    tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:src="@mipmap/ic_launcher"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"/>
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginTop="70dp"
+        android:src="@drawable/sopt_logo" />
 
     <EditText
         android:id="@+id/et_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="이메일"
         android:layout_below="@+id/imageView"
-        android:layout_marginTop="24dp"
-        android:layout_marginHorizontal="24dp"/>
+        android:layout_marginTop="32dp"
+        android:hint="이메일"
+        android:inputType="textEmailAddress" />
 
     <EditText
         android:id="@+id/et_passwd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textPassword"
         android:hint="비밀번호"
         android:layout_below="@+id/et_email"
-        android:layout_marginTop="24dp"
-        android:layout_marginHorizontal="24dp"/>
+        android:layout_marginTop="24dp"/>
 
     <Button
-        android:id="@+id/login_btn"
+        android:id="@+id/btn_signIn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="로그인"
         android:layout_below="@+id/et_passwd"
-        android:layout_marginTop="24dp"
-        android:layout_marginHorizontal="24dp"/>
+        android:layout_marginTop="24dp"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_below="@+id/login_btn"
+        android:layout_below="@+id/btn_signIn"
         android:layout_marginTop="32dp"
         android:layout_centerHorizontal="true">
 
@@ -52,11 +56,11 @@
             android:text="아직 회원이 아니신가요?"/>
 
         <TextView
-            android:id="@+id/tv_signup"
+            android:id="@+id/txt_signUp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="회원가입"
             android:layout_marginLeft="8dp"/>
-
     </LinearLayout>
+
 </RelativeLayout>
