--- a/Seminar2/seminar2/app/src/main/res/layout/activity_main.xml
+++ b/Seminar2/seminar2/app/src/main/res/layout/activity_main.xml
@@ -17,16 +17,36 @@
             android:id="@+id/main_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary">
+            android:background="@color/white">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="SecondSeminar"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:orientation="horizontal">
 
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_camera"
+                    android:layout_gravity="center_vertical"/>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="𝓘𝓷𝓼𝓽𝓪𝓰𝓻𝓪𝓶"
+                    android:textColor="#000000"
+                    android:textSize="25sp"
+                    android:textStyle="normal"
+                    android:gravity="center"
+                    android:layout_weight="1"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_send_black"
+                    android:rotation="-45"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginRight="10dp"/>
+            </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -34,7 +54,7 @@
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/white"
         app:itemIconTint="@color/bottom_selector"
         app:itemTextColor="@color/bottom_selector"
         app:menu="@menu/navigation"
