--- a/Seminar2/seminar2/app/src/main/res/layout/fragment_library.xml
+++ b/Seminar2/seminar2/app/src/main/res/layout/fragment_library.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".LibraryFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Library Fragment" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="16sp"
+        android:text="This is Library Fragment" />
 
 </FrameLayout>
