--- a/Seminar2/seminar2/app/src/main/res/layout/item_insta.xml
+++ b/Seminar2/seminar2/app/src/main/res/layout/item_insta.xml
@@ -9,8 +9,8 @@
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:paddingHorizontal="24dp"
+        android:background="@color/white"
+        android:paddingHorizontal="10dp"
         android:paddingVertical="8dp"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -26,9 +26,9 @@
             android:id="@+id/tv_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="15dp"
             android:text="TextView"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/img_profile"
@@ -43,7 +43,7 @@
             app:layout_constraintBottom_toBottomOf="@+id/tv_username"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/tv_username"
-            android:src="@drawable/ic_more_white" />
+            android:src="@drawable/ic_more_black" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
