--- a/Seminar2/seminar2/app/src/main/res/menu/navigation.xml
+++ b/Seminar2/seminar2/app/src/main/res/menu/navigation.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_home"
-        android:icon="@drawable/ic_home_white"
+        android:icon="@drawable/ic_home_black"
         android:title="Home"/>
 
     <item android:id="@+id/menu_book"
-        android:icon="@drawable/ic_book_white"
+        android:icon="@drawable/ic_book_black"
         android:title="Book"/>
 
     <item android:id="@+id/menu_person"
-        android:icon="@drawable/ic_person_white"
+        android:icon="@drawable/ic_person_black"
         android:title="MyPage"/>
 </menu>
