--- a/Seminar2/seminar2/app/src/main/res/values/colors.xml
+++ b/Seminar2/seminar2/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#08338d</color>
     <color name="colorAccent">#ff0000</color>
     <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
