Seminar2 hw01 and hw02

--- a/Seminar2/seminar2/app/src/main/res/layout/fragment_home.xml
+++ b/Seminar2/seminar2/app/src/main/res/layout/fragment_home.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:orientation="vertical"
+        android:paddingVertical="10dp"
+        android:clipToPadding="false"
         tools:listitem="@layout/item_insta"/>
 
 </FrameLayout>
